1. Add missing header paths to the PI Pico toolchains. 2. Update documentation

--- a/top/start_here.html
+++ b/top/start_here.html
@@ -5351,7 +5351,7 @@ html .solidborders td {  border: 1px solid black; }</pre>
 <div modified="20190112022928289" title="$:/state/toc/Overview-Using NQBP--242358753">
 <pre>open</pre>
 </div>
-<div list="Overview" title="$:/StoryList">
+<div list="[[Installing NQBP]] [[Selecting What To Build]] Overview [[NQBP History]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20141011164829984" modified="20230223182055765" title="$:/temp/advancedsearch">
@@ -5504,7 +5504,7 @@ html .solidborders td {  border: 1px solid black; }</pre>
 * `mixed`
 ** Attempts to support Outcast //referencing// of the `xpkgs/` and `xinc/` directories while using the //legacy// model.  This model is ''experimental'' and requires manual placement of the external Outcast packages into the single root directory.  ''Do NOT use this model unless you truly know what you are doing''.</pre>
 </div>
-<div created="20140727042146669" creator="JohnTaylor" modified="20230223163741310" modifier="JohnTaylor" tags="Overview" title="Installing NQBP">
+<div created="20140727042146669" creator="JohnTaylor" modified="20230224034146493" modifier="JohnTaylor" tags="Overview" title="Installing NQBP">
 <pre>!!TODO: specific install instructions once hosted on somewhere on the web
 
 !!General Instructions:
@@ -5513,7 +5513,7 @@ html .solidborders td {  border: 1px solid black; }</pre>
 # Unzip the tar/zip file to directory of your choosing on your box.  A single installation of the NQBP files can be shared across multi-users and/or multiple projects/workspaces on a single box.
 # NQBP requires the following environment variables to be set:
 
-#*  `NQBP_BIN` set to the full path to the root directory where the NQBP package is located. to be set.  
+#*  `NQBP_BIN` set to the full path to the root directory where the NQBP package is located.  
 #*  `NQBP_PKG_ROOT` set to the full path to the package that is actively being worked on.  Typically this is root directory of your local repository.
 #* `NQBP_WORK_ROOT` set to the full path of the directory containing one or more packages being developed. In practice this is set to the parent directory of `NQBP_PKG_ROOT`.
 #* `NQB_XPKGS_ROOT` set to the full path of the root directory containing external or third-party source. Typically this is set to `NQBP_PKG_ROOT/xsrc` directory.
