--- a/top/start_here.html
+++ b/top/start_here.html
@@ -5355,7 +5355,7 @@ html .solidborders td {  border: 1px solid black; }</pre>
 <div modified="20190112022928289" title="$:/state/toc/Overview-Using NQBP--242358753">
 <pre>open</pre>
 </div>
-<div list="[[Customizable build values]] [[Modifying mytoolchain.py]] Linking [[External Package Model]] [[Selecting a ToolChain]] [[Preprocessing Scripts]] [[Adding a new Toolchain]] [[Installing NQBP]] [[NQBP History]] [[Workspace Structure]] Overview" title="$:/StoryList">
+<div list="[[Preprocessing Scripts]] Overview" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20141011164829984" modified="20230223182055765" title="$:/temp/advancedsearch">
@@ -5685,7 +5685,7 @@ For those interested the back story for NQBP can be found [[here|NQBP History]].
 
 {{LeftMenu}}</pre>
 </div>
-<div created="20200421040908585" modified="20200421042317882" tags="Usage [[Using NQBP]]" title="Preprocessing Scripts">
+<div created="20200421040908585" modified="20241228184912581" tags="Usage [[Using NQBP]]" title="Preprocessing Scripts">
 <pre>NQBP supports the ability to run //pre-processing scripts// prior to the compile stage.  This allows NQBP to work with code bases that use auto-generate additional source code files based on the developer authored source code.  An example of this is running [[QT's Moc compiler|[https://doc.qt.io/qt-5/moc.html]] with each build.
 
 !!!How it works
@@ -5710,15 +5710,18 @@ For those interested the back story for NQBP can be found [[here|NQBP History]].
 #   from nqbplib.my_globals import NQBP_PRE_PROCESS_SCRIPT
 #   from nqbplib.my_globals import NQBP_PRE_PROCESS_SCRIPT_ARGS
 #   NQBP_PRE_PROCESS_SCRIPT( &quot;&lt;preprocess-script.py&gt;&quot; )  # i.e the name of this script
-#   NQBP_PRE_PROCESS_SCRIPT_ARGS(&quot;&lt;arg7&gt; &lt;arg8&gt; ...&quot;)    # project specific arguments pass to the script
+#   NQBP_PRE_PROCESS_SCRIPT_ARGS(&quot;&lt;arg9&gt; &lt;arg10&gt; ...&quot;)    # project specific arguments pass to the script
 #
-# NOTE: The script is ALWAYS passed &lt;arg1&gt; ... &lt;arg6&gt; where:
+# NOTE: The script is ALWAYS passed &lt;arg1&gt; ... &lt;arg8&gt; where:
 #             &lt;arg1&gt;: build|clean         
 #             &lt;arg2&gt;: verbose|terse
 #             &lt;arg3&gt;: &lt;workspace-dir&gt;
 #             &lt;arg4&gt;: &lt;package-dir&gt; 
 #             &lt;arg5&gt;: &lt;project-dir&gt; 
 #             &lt;arg6&gt;: &lt;current-dir&gt; 
+#             &lt;arg7&gt;: &lt;build-variant&gt; 
+#             &lt;arg8&gt;: &lt;debug-build&gt;   // debug|release|clean
+#
 #
 # Since the &lt;preprocess-script.py&gt; script MUST be in every (desired) source 
 # directory, users are encouraged that the &lt;preprocess-script.py&gt; ONLY be a 
